2005-06-04  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdnd.c (gimp_dnd_get_viewable_icon): use the
	viewable's description in the drag icon. Use a larger preview.

	* app/widgets/gimpdockbook.c: tweak spacing and border-width of
	the tab widget if it is being used as drag icon.

2005-06-04  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolorarea.[ch]: invalidate the buffer when
	the widget's sensitivity changes. Draw a stipple pattern on the
	insensitive color area.

	* libgimpwidgets/gimpcellrenderercolor.c: follow internal API change.

	* libgimpwidgets/gimpcolorbutton.c: pass GDK_BUTTON1_MASK as
	drag-mask. Doesn't work for whatever reason but it didn't work
	with GDK_BUTTON2_MASK either.

2005-06-04  Michael Schumacher  <schumaml@cvs.gnome.org>

	* plug-ins/common/webbrowser.c: use GetDesktopWindow() and SW_SHOW
	as suggested in bug #171200. Applied to both branches.

2005-06-04  Michael Schumacher  <schumaml@cvs.gnome.org>

	* plug-ins/helpbrowser/dialog.c: added #ifdef G_OS_WIN32 because
	O_BINARY isn't available on other platforms

2005-06-04  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdnd.c (gimp_dnd_get_viewable_icon): reduced the
	number of characters to show before ellipsizing the label.

	* libgimpwidgets/gimpcolorarea.c: added a "draw-border" property.

	* app/widgets/gimpcolorframe.c: draw a border around the color area.

2005-06-03  Michael Schumacher  <schumaml@cvs.gnome.org>

	* plug-ins/helpbrowser/dialog.c: added a O_BINARY to make sure
	that images are loaded correctly

2005-06-03  Manish Singh  <yosh@gimp.org>

	* libgimp/gimpdrawablecombobox.c: create the layer combo with the
	right type.

2005-06-03  Manish Singh  <yosh@gimp.org>

	* tools/pdbgen/Makefile.am
	* tools/pdbgen/enumcode-py.pl: removed, unneeded now.

2005-06-04  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcolorframe.[ch]: added property for "mode",
	fixed some implementation issues.

	* app/widgets/gimpsamplepointeditor.c: create the color frames